# cv-resume-optimizer-agent-skill

./: .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements.txt  setup.py
skills/: main.md  sub-framework-selector.md  sub-improvement-roadmap.md  sub-profile-intake.md  sub-quality-reviewer.md  sub-scoring-engine.md
src/: __init__.py  framework_selector.py  harness.py  improvement_roadmap.py  profile_intake.py  quality_reviewer.py  scoring_engine.py
tests/: test-scenarios.md  test_suite.py
tools/: knowledge_updater.py
