[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-resume-optimizer"
version = "1.0.0"
description = "Production-grade resume analysis with ATS-aware scoring and improvement roadmaps"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CV/Resume Optimizer Team"}
]
keywords = [
    "resume",
    "cv",
    "job-description",
    "ATS",
    "scoring",
    "optimization",
    "career",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Employment",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
crawl = [
    "crawl4ai>=0.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]

[project.scripts]
cv-optimizer = "harness:main"
cv-knowledge-update = "tools.knowledge_updater:main"

[project.urls]
Homepage = "https://github.com/your-org/cv-resume-optimizer"
Documentation = "https://github.com/your-org/cv-resume-optimizer#readme"
Repository = "https://github.com/your-org/cv-resume-optimizer"
Issues = "https://github.com/your-org/cv-resume-optimizer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
